docs: refresh README and plan.md with Replicant, MJML HTTP email, and Phase 15 roadmap (Employees, Employments, Transfers, Terminations)